--- a/admin/css/product-placer-simple-admin.css
+++ b/admin/css/product-placer-simple-admin.css
@@ -2,3 +2,72 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+
+ .sunset-general-form,
+.sunset-sidebar-preview { display: inline-block; float: left; }
+
+.sunset-sidebar-preview { width: 280px; background-color: #1F1F1F; padding: 20px; text-align: center; margin-right: 20px; }
+.sunset-sidebar { display: block; text-align: center; }
+h1.sunset-username, 
+h2.sunset-description { font-weight: 100; color: #fff; }
+h1.sunset-username { font-size: 24px; margin: 0 0 10px; }
+h2.sunset-description { font-size: 13px; margin: 0 0 20px; }
+
+.image-container { display: block; width: 100%; overflow: hidden; text-align: center; }
+.profile-picture { width: 122px; height: 122px; overflow: hidden; border-radius: 50%; margin: 20px auto; background-position: center center; background-repeat: no-repeat; background-size: cover; }
+
+.nav-tabs {
+	float: left;
+	width: 100%;
+	margin: 0;
+	list-style-type: none;
+	border-bottom: 1px solid transparent;
+}
+
+.nav-tabs > li {
+	float: left;
+	margin-bottom: -1px;
+}
+
+.nav-tabs > li > a {
+	margin-right: 2px;
+	line-height: 1.5;
+	padding: 10px;
+	border: 1px solid transparent;
+	border-radius: 4px 4px 0 0;
+	float: left;
+	text-decoration: none;
+}
+
+.nav-tabs > li > a:hover {
+	border-color: #eee #eee #ddd;
+}
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+	color: #555;
+	cursor: default;
+	background-color: #fff;
+	border-color: transparent;
+}
+
+.tab-content > .tab-pane {
+	float: left;
+	width: 100%;
+	display: none;
+}
+
+.tab-content > .tab-pane.active {
+	display: block;
+	padding: 10px;
+	background-color: #fff;
+	box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
+}
+
+
+h1{
+
+    color: green;
+}
