--- a/public/css/product-placer-simple-public.css
+++ b/public/css/product-placer-simple-public.css
@@ -3,42 +3,85 @@
  * included in this file.
  */
 
- 
 @font-face {
-    font-family: "dashicons";
-    src: url("../fonts/dashicons.eot");
-  }
-  
-  @font-face {
-    font-family: "dashicons";
-    src: url(data:application/x-font-woff;charset=utf-8;base64) format("woff"), url("../fonts/dashicons.ttf") format("truetype"), url("../fonts/dashicons.svg#dashicons") format("svg");
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  .star-rating .star-full:before {
-    content: "\f155";
-  }
-  
-  .star-rating .star-half:before {
-    content: "\f459";
-  }
-  
-  .star-rating .star-empty:before {
-    content: "\f154";
-  }
-  
-  .star-rating .star {
-    color: #0074A2;
-    display: inline-block;
-    font-family: dashicons;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    height: 20px;
-    line-height: 1;
-    text-align: center;
-    text-decoration: inherit;
-    vertical-align: top;
-    width: 20px;
-  }
+  font-family: "dashicons";
+  src: url("../fonts/dashicons.eot");
+}
+
+@font-face {
+  font-family: "dashicons";
+  src: url(data:application/x-font-woff;charset=utf-8;base64) format("woff"),
+    url("../fonts/dashicons.ttf") format("truetype"),
+    url("../fonts/dashicons.svg#dashicons") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.star-rating .star-full:before {
+  content: "\f155";
+}
+
+.star-rating .star-half:before {
+  content: "\f459";
+}
+
+.star-rating .star-empty:before {
+  content: "\f154";
+}
+
+.star-rating .star {
+  color: #0074a2;
+  display: inline-block;
+  font-family: dashicons;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  height: 20px;
+  line-height: 1;
+  text-align: center;
+  text-decoration: inherit;
+  vertical-align: top;
+  width: 20px;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 600;
+  color: #343a40;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.45rem 0.85rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #ffb228;
+  border-color: #ffb228;
+}
+
+.btn:hover {
+  color: #fff;
+  background-color: #ffb228;
+  border-color: #ffb228;
+}
+
+.secondary_box {
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px rgba(64, 64, 64, 0.2);
+}
+
+.site-info a {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+}
